# Architecture-Of-Computing-Systems

./: README.md
HW1/: CMakeLists.txt  README.md  main.cpp
HW1/src/: solution.cpp  solution.h
HW1/tests/: Makefile  generator.cpp
HW2/: CMakeLists.txt  README.md  main.cpp
HW2/results/prepared/: result2.txt
HW2/src/: solution.cpp  solution.h
HW3/docs/: README.md
HW3/results/: res1.txt  res2.txt  res3.txt  res4.txt  res5.txt  resrandom.txt
HW3/src/: main.py
HW3/src/modules/: interactor.py  order.py  timer.py  transport.py
HW3/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
HW4/: Makefile  README.md
HW4/results/prepared/: result1.txt
HW4/src/: code.asm  func.asm  source.c
HW4/testing/: input.txt
HW4/tests/test-suits/prepared/: test1.txt  test2.txt
HW5/: CMakeLists.txt  README.md  main.cpp
HW5/src/: generator.h  parser.h  reader.h  state.h
